<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MacBuddy</string>
    <string name="login_btn">Login</string>
    <string name="action_settings">Settings</string>
    <string name="email_id">Email ID</string>
    <string name="email_id_hint">************@mavs.uta.edu</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_button">Login</string>
    <string name="login_image">Image on login screen</string>
    <string name="welcome_image">Image on welcome screen</string>
    <string name="register_button">Register</string>
    <string name="registration_header">Registration Page</string>
    <string name="retype_password">Re-type Password</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="basket_ball">Basket Ball</string>
    <string name="l_badminton">Badminton</string>
    <string name="l_squash">Squash</string>
    <string name="volley_ball">Volley Ball</string>
    <string name="user_name">User Name</string>
    <string name="user_name_hint">Enter your username</string>
    <string name="create_event_button">Create EVENTS</string>
    <string name="profile_button">User PROFILE</string>
    <string name="current_event_button">Current EVENTS</string>

</resources>
