<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="145dp"
        android:layout_height="204dp"
        android:layout_gravity="center"
        android:maxHeight="10dp"
        android:maxWidth="10dp"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/firstscreen" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#147dc8"
        android:text="@string/login_btn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6600"
        android:text="@string/register_button" />

</LinearLayout>