<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example1.project.MainActivity" >

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="#147dc8"
        android:text="@string/create_event_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_event_button"
        android:layout_alignRight="@+id/create_event_button"
        android:layout_alignStart="@+id/create_event_button"
        android:layout_alignEnd="@+id/create_event_button"
        android:layout_below="@+id/button2"
        android:layout_marginTop="66dp"
        android:background="#147dc8"
        android:text="@string/current_event_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_event_button"
        android:layout_alignRight="@+id/create_event_button"
        android:layout_alignStart="@+id/create_event_button"
        android:layout_alignEnd="@+id/create_event_button"
        android:layout_below="@+id/create_event_button"
        android:layout_marginTop="61dp"
        android:background="#FF6600"
        android:text="@string/profile_button"
        android:textSize="30sp" />

</RelativeLayout>